--- a/ArtistfyTF/src/main/resources/templates/contract/contract.html
+++ b/ArtistfyTF/src/main/resources/templates/contract/contract.html
@@ -33,7 +33,6 @@
 		<ul
 			class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
 			id="accordionSidebar">
-
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
@@ -46,16 +45,13 @@
 			<!-- <div class="sidebar-brand-text mx-2">Programación en Web</div>-->
 			</a>
 
-
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
 
 
-
-
 			<!-- Nav Item - Pages Collapse Menu -->
 			<li class="nav-item"><a class="nav-link collapsed" href="#"
-				data-target="#collapseTwo" aria-expanded=true
+				data-target="#collapseTwo" aria-expanded="false"
 				aria-controls="collapseTwo"> <i class="fas fa-fw fa-cog"></i> <span>Men&uacute;</span>
 			</a>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
@@ -67,11 +63,6 @@
 						<a class="collapse-item" th:href="@{/contracts/list}">Contratos</a>
 					</div>
 				</div></li>
-
-
-
-			<!-- Divider -->
-			<hr class="sidebar-divider">
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
@@ -118,6 +109,7 @@
 								class="mr-2 d-none d-lg-inline text-gray-600 small"><img
 									th:src="@{/img/logout.png}" width="30" height="30" alt="logo"
 									align="middle"></img></span>
+
 						</a> <!-- Dropdown - User Information -->
 							<div
 								class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -126,8 +118,8 @@
 									class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Perfil
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="artists/index"
-									data-toggle="modal" data-target="#logoutModal"> <i
+								<a class="dropdown-item" href="#" data-toggle="modal"
+									data-target="#logoutModal"> <i
 									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
 									Cerrar sesión
 								</a>
@@ -142,42 +134,73 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Artistas</h1>
-
-					<a th:href="@{/artists/new/}" class="btn btn-secondary btn-xs">Nuevo</a>
+					<h1 class="h3 mb-4 text-gray-800">Contratos</h1>
 
 					<hr class="sidebar-divider">
+					<div th:object="${contract}" th:remove="tag">
+						<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger"
+							role="alert">
+							<li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
+						</ul>
+					</div>
 
-					<table class="table table-striped">
-						<thead class="thead-dark">
-							<tr>
-								<th scope="col">Id</th>
-								<th scope="col">Nombre</th>
-								<th scope="col">Apellido</th>
-								<th scope="col">Dni</th>
-								<th scope="col">Email</th>
-								<th scope="col">Telefono</th>
-								<th scope="col">Habilidad</th>
-								<th scope="col">Genero</th>
-								<th scope="col">Website</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="art: ${listArtists}">
-								<td th:text="${art.idArtist}"></td>
-								<td th:text="${art.firstName}"></td>
-								<td th:text="${art.lastName}"></td>
-								<td th:text="${art.dni}"></td>
-								<td th:text="${art.email}"></td>
-								<td th:text="${art.phone}"></td>
-								<td th:text="${art.skill}"></td>
-								<td th:text="${art.genre}"></td>
-								<td th:text="${art.websiteUrl}"></td>
-							</tr>
-						</tbody>
-					</table>
+					<form th:action="@{/contracts/save}" th:object="${contract}"
+						method="post">
+						
+						<div class="form-group row">
+							<label for="artist">Artista:</label>
+							<div class="col-sm-6">
+								<select class="form-control" th:field="*{artist.idArtist}">
+									<option th:each="a: ${listArtists}"
+										th:value="${a.idArtist}" th:text="${a.firstName}"
+										th:selected="(${a.idArtist} == *{artist.idArtist})"></option>
+								</select>
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label for="description" class="col-sm-2 col-form-label">Descripcion</label>
+							<div class="col-sm-6">
+								<textarea type="text" th:field="*{descriptionContract}" class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('descriptionContract')}"
+									th:errors="*{descriptionContract}"></small>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="price" class="col-sm-2 col-form-label">Salario</label>
+							<div class="col-sm-6">
+								<input type="number" th:field="*{salary}" class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('salary')}"
+									th:errors="*{salary}"></small>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="" class="col-sm-2 col-form-label">Direccion</label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{address}" class="form-control" 
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></small>
+							</div>
+						</div>
+						
 
+						<div class="form-group row">
+							<div class="col-sm-6">
+								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
+								<a href="/contracts/list" class="btn btn-danger">Cancelar</a>
+							</div>
+						</div>
+
+					</form>
+					
 					<p th:text="${mensaje}" class="form-text text-success"></p>
+
+
 
 				</div>
 				<!-- /.container-fluid -->
@@ -220,12 +243,12 @@
 					</button>
 				</div>
 				<div class="modal-body">Seleccione "Cerrar sesión" a
-					continuación si está listo para finalizar su sesión actual.</div>
+					continuación si está listo para finalizar su sesión actual</div>
 				<div class="modal-footer">
 					<button class="btn btn-secondary" type="button"
 						data-dismiss="modal">Cancelar</button>
-					<a class="btn btn-primary" th:href="@{/artists/index}">Cerrar
-						sesión</a>
+					<a class="btn btn-primary" th:href="@{/contracts/index}">Cerrar
+						Sesión</a>
 				</div>
 			</div>
 		</div>
