--- a/ArtistfyTF/src/main/resources/templates/organizer/organizer.html
+++ b/ArtistfyTF/src/main/resources/templates/organizer/organizer.html
@@ -65,6 +65,9 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/organizers/list}">Organizadores</a>						
 					</div>
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/events/list}">Eventos</a>						
+					</div>
 				</div></li>
 
 			<!-- Sidebar Toggler (Sidebar) -->
