--- a/ArtistfyTF/src/main/resources/templates/artist/artist.html
+++ b/ArtistfyTF/src/main/resources/templates/artist/artist.html
@@ -239,7 +239,7 @@
 						</div>
 
 					</form>
-					<!--<p th:text="${mensaje}" style="color:red"> </p>-->
+					<p th:text="${mensaje}" style="color:red"> </p>
 
 
 
