--- a/ArtistfyTF/src/main/resources/templates/contract/listContracts.html
+++ b/ArtistfyTF/src/main/resources/templates/contract/listContracts.html
@@ -162,6 +162,7 @@
 								<th scope="col">Descripcion</th>
 								<th scope="col">Salario</th>
 								<th scope="col">Direccion</th>
+								<th scope="col">Operacion</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -171,6 +172,11 @@
 								<td th:text="${cont.descriptionContract}"></td>
 								<td th:text="${cont.salary}"></td>
 								<td th:text="${cont.address}"></td>
+								<td><a th:href="@{'/contracts/delete/'+${cont.idContract}}">
+										<i class="iconf fa fa-trash" style="color: red"></i>
+								</a> <a th:href="@{'/contracts/irupdate/'+${cont.idContract}}"> <i
+										class="iconf fa fa-pen" style="color: blue"></i>
+								</a></td>
 							</tr>
 						</tbody>
 					</table>
