--- a/ArtistfyTF/src/main/resources/templates/artist/listArtists.html
+++ b/ArtistfyTF/src/main/resources/templates/artist/listArtists.html
@@ -166,6 +166,7 @@
 								<th scope="col">Habilidad</th>
 								<th scope="col">Genero</th>
 								<th scope="col">Website</th>
+								<th scope="col">Operacion</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -179,6 +180,11 @@
 								<td th:text="${art.skill}"></td>
 								<td th:text="${art.genre}"></td>
 								<td th:text="${art.websiteUrl}"></td>
+								<td><a th:href="@{'/artists/delete/'+${art.idArtist}}">
+										<i class="iconf fa fa-trash" style="color: red"></i>
+								</a> <a th:href="@{'/artists/irupdate/'+${art.idArtist}}"> <i
+										class="iconf fa fa-pen" style="color: blue"></i>
+								</a></td>
 							</tr>
 						</tbody>
 					</table>
