--- a/ArtistfyTF/src/main/resources/templates/contract/contract.html
+++ b/ArtistfyTF/src/main/resources/templates/contract/contract.html
@@ -152,6 +152,16 @@
 
 					<form th:action="@{/contracts/save}" th:object="${contract}"
 						method="post">
+						<div class="form-group row">
+							<label for="name" class="col-sm-2 col-form-label">Codigo</label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{idContract}" class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('idContract')}"
+									th:errors="*{idContract}"></small>
+							</div>
+						</div>
 						
 						<div class="form-group row">
 							<label for="artist">Artista:</label>
