--- a/ArtistfyTF/src/main/resources/templates/organizer/organizer.html
+++ b/ArtistfyTF/src/main/resources/templates/organizer/organizer.html
@@ -153,6 +153,16 @@
 					<form th:action="@{/organizers/save}" th:object="${organizer}"
 						method="post">
 						<div class="form-group row">
+							<label for="name" class="col-sm-2 col-form-label">Codigo</label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{idOrganizer}" class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('idOrganizer')}"
+									th:errors="*{idOrganizer}"></small>
+							</div>
+						</div>
+						<div class="form-group row">
 							<label for="name" class="col-sm-2 col-form-label">Nombre</label>
 							<div class="col-sm-6">
 								<input type="text" th:field="*{firstName}" class="form-control"
